FIX: sonarQube issues